# parallel

./: parallel.py  pyproject.toml
