[tool.poetry]
name = "parallel"
version = "0.1.0"
description = ""
authors = ["Nate Sesti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.24.0"
dotenv = "^0.0.5"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
